<resources>
    <string name="app_name">Github User</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="setting_menu">Setting Menu</string>
    <string name="title_activity_settings">Settings</string>
    <string name="language_header">Language</string>
    <string name="language_option">Language Selection</string>
    <string name="user_name_dummy">USER_NAME</string>
    <string name="user_username_dummy">USER_USERNAME</string>
    <string name="search">Search User</string>
    <string name="search_hint">Username, e.g. djtyranix</string>
    <string name="followers_following">Followers: %1$d | Following: %2$d</string>
    <string name="language_change_desc">Change your system language</string>
    <string name="loading">Loading User</string>
    <string name="user_not_found">User Not Found</string>
    <string name="welcome_message">Tap the search button to search user</string>
    <string name="notification_header">Notification</string>
    <string name="notification_summary">Reminder to open the app</string>
    <string name="notification_title">Set Reminder</string>
    <string name="app_comeback">Let\'s get back to the app and search more user!</string>
    <string name="app_comeback_title">Let\'s Get Back!</string>
    <string name="reminder_set">Reminder set at %1$s</string>
    <string name="notif_off_summary">Turn off your existing reminder</string>
    <string name="notif_off_title">Turn Off Reminder</string>
    <string name="notif_off_confirmation">Press again to disable reminder.</string>
    <string name="exit_confirmation">Press again to exit.</string>
    <string name="reminder_cancelled">Reminder successfully cancelled.</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="fav_add_success">User successfully added to favorite.</string>
    <string name="fav_del_success">User successfully removed from favorite.</string>
    <string name="no_favorite">No favorited user found.</string>
    <string name="favorite_activity">Favorited User</string>
    <string name="appwidget_text">FAVORITE USER</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">NO DATA</string>
</resources>