<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/language_header">

        <Preference
            app:key="select_language"
            app:summary="@string/language_change_desc"
            app:title="@string/language_option" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notification_header">

        <Preference
            app:key="notification_switch"
            app:summary="@string/notification_summary"
            app:title="@string/notification_title" />

        <Preference
            app:key="notification_off"
            app:enabled="false"
            app:summary="@string/notif_off_summary"
            app:title="@string/notif_off_title" />
    </PreferenceCategory>
</PreferenceScreen>